ingress/hockin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hockin
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hockin-org
    networking.gke.io/managed-certificates: hockin
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - host: hockin.org
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hockin-org
            port:
              number: 80
      - path: /~thockin
        pathType: ImplementationSpecific
        backend:
          service:
            name: hockin-org-thockin
            port:
              number: 80
      - path: /~thockin/*
        # FIXME: this is a hack until I decompose the contents into smaller
        # pieces, e.g. a backend bucket.
        pathType: ImplementationSpecific
        backend:
          service:
            name: hockin-org-thockin
            port:
              number: 80
  - host: family.hockin.org
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hockin-org-genealogy
            port:
              number: 80
